--- a/findly-builder/src/app/components/source-content/source-content.component.html
+++ b/findly-builder/src/app/components/source-content/source-content.component.html
@@ -153,7 +153,7 @@
               <div id="accordion" class="accordion-section">
                 <div class="card_content" *ngFor="let page of selectedSource.pages | filter: [ pagesSearch, 'title']">
                   <div class="card_header">
-                    <a class="card_link collapsed" data-toggle="collapse" href="#collapseOne">
+                    <a class="card_link collapsed" data-toggle="collapse" href="#collapseOne{{page._id}}">
                       <div class="row m-0 content">
                         <div class="col-8 link-name">{{page.url || selectedSource.url}}</div>
                         <div class="col-2 date">{{page.createdOn | dateFormatPipe}}</div>
@@ -164,7 +164,7 @@
                       </div>
                     </a>
                   </div>
-                  <div id="collapseOne" class="collapse" data-parent="#accordion">
+                  <div id="collapseOne{{page._id}}" class="collapse" data-parent="#accordion">
                     <div class="card_body" style="padding-left: 30px;">
                       <div class="info-content">
                         <div class="row m-0 row_content">
@@ -184,7 +184,8 @@
                       <div class="label_text">Results Preview</div> 
                       <div class="info-content">
                         <div class="label_text" *ngIf="page.sections && page.sections.length">{{page.sections[0]}}</div>    
-                        <div class="previewContent" [innerHtml]="page.body"></div>        
+                        <div class="previewContent" *ngIf="!page.searchResultPreview" [innerHtml]="page.body"></div> 
+                        <div class="previewContent" *ngIf="page.searchResultPreview" [innerHtml]="page.searchResultPreview"></div>        
                       </div>
                       <button class="kr-sg-button-primary btn_md mt-3 mb-3">Test & Preview</button>
                     </div>
