--- a/findly-builder/src/app/shared/slider-component/slider-component.component.scss
+++ b/findly-builder/src/app/shared/slider-component/slider-component.component.scss
@@ -87,7 +87,7 @@ app-slider-component{
                             @extend %dropdown;
                             margin-bottom: 15px;
                             label{
-                                font-family: Lato;
+                                font-family: Inter;
                                 font-size: 14px;
                                 font-weight: bold;
                                 color: $primaryColor;
