--- a/findly-builder/src/app/app.component.html
+++ b/findly-builder/src/app/app.component.html
@@ -1,8 +1,8 @@
 <meta name="viewport" content="width=device-width, user-scalable=no">
-<div *ngIf="!loading">
+<div *ngIf="!loading" class="krFindlyAppComponent">
     <app-header></app-header>
     <app-mainmenu class="toShowAppHeader"></app-mainmenu>
-    <app-content class="container-fluid deflectContainer"></app-content>
+    <app-content class="container-fluid appContent"></app-content>
 </div>
 
 <div class="loaderContainer"  *ngIf="loading">
