--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -20,7 +20,7 @@
         </div>
         <div class="btnContainer">
           <a href="#" class="learn-more">Lets Get Started?</a>
-          <button class="kr-sg-button-primary btn_md"  [routerLink]="['/content']" skipLocationChange>Add Source</button>
+          <button class="kr-sg-button-primary btn_md"  [routerLink]="['/source']" skipLocationChange>Add Source</button>
         </div>
       </div>
 
