--- a/findly-builder/src/app/components/source-content/source-content.component.scss
+++ b/findly-builder/src/app/components/source-content/source-content.component.scss
@@ -401,3 +401,19 @@
         }
     }
 }
+
+.span-ul{
+    
+    color: #009dab;
+    text-decoration: underline;
+    font-weight: bold;
+    cursor: pointer;
+}
+.browse-pad{
+    padding-top: 6% !important;
+}
+.drag-label{
+    
+    font-weight: bold;
+    cursor: pointer; 
+}
