--- a/findly-builder/src/app/components/source-content/source-content.component.html
+++ b/findly-builder/src/app/components/source-content/source-content.component.html
@@ -26,7 +26,80 @@
     </div>
   </form>
   </div>
-  
+<div *ngIf="(selectedSourceType === 'document')" class="creratedocument">
+    <form #domainCrawl="ngForm">
+    <div class="kr-sg-input-text mb-3">
+      <div class="label-text">Source URL</div>
+      <input type="url" autocomplete="off" name="sourceUrl" [(ngModel)]="newSourceObj.url" class="input-text" required>
+      <!-- <div class="error-msg" *ngIf="domainCrawl && domainCrawl.dirty && !newSourceObj.url">Enter a valid url</div> -->
+    </div>
+    <div class="kr-sg-input-text mb-3">
+      <div class="label-text">Source Title</div>
+      <input type="text" autocomplete="off" name="sourceTitle" [(ngModel)]="newSourceObj.name" class="input-text" required>
+      <!-- <div class="error-msg" *ngIf="domainCrawl && domainCrawl.dirty && !newSourceObj.name">Enter a valid name</div> -->
+    </div>
+    <div class="kr-sg-input-text-area mb-3">
+
+      <div class="kr-sg-file-drag-drop">
+      <div class="label_text">File</div>
+      <div class="drag-drop-sec">
+      <div _ngcontent-gpv-c11="" class="imageDiv">
+      <img _ngcontent-gpv-c11="" class="ng-tns-c11-2" src="https://banner2.cleanpng.com/20180331/vww/kisspng-computer-icons-document-memo-5ac0480f061158.0556390715225507990249.jpg">
+      </div>
+      <div class="custom-file " style="opacity: 0;">
+      <input type="file" class="custom-file-input " (change)="filechange($event)" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" accept=".csv,.pdf">
+      <label class="custom-file-label browse-pad" for="inputGroupFile01"><span>Browse</span></label>
+      </div>
+      <div class="drag-label">Drag and Drop Or <span class="span-ul">Browse</span></div>
+      </div>
+      <!-- <div class="kr-sg-file-drag-drop" *ngIf="fileAdded">
+        <div class="uploaded-file-name error">
+        <div class="file-close-text">
+        <img src="assets/icons/close.svg" (click)="closeFileMessage()" class="close-file">
+        <div class="file-name" [innerHTML]="fileName"></div>
+        </div>
+        <div class="progress-status">
+        <img src="assets/icons/info.svg">
+        </div>
+        </div>
+        <div class="error-text" [innerHTML]="fileError"></div>
+        </div> -->
+        </div>
+        
+        
+        </div>
+
+
+
+
+
+
+    <!-- <div class="kr-sg-input-text-area mb-3">
+       <div class="kr-sg-file-drag-drop">File
+                                
+                                <div class="drag-drop-sec">
+                                    <div class="drag-text">Drag and Drop</div> 
+                                    <div class="divider-text">Or</div>                            
+                                    <div class="custom-file">
+                                        <input type="file"  (change)='filechange($event)'class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+                                        <label class="custom-file-label" ><span>Browse</span></label>
+                                    </div>
+                                </div>
+                                <div class="uploaded-file-name">
+                                    <div class="file-close-text">
+                                        <img src="assets/icons/close.svg" class="close-file">
+                                        <div class="file-name">StreamIcon.png</div>
+                                    </div>                                  
+                                </div>                               
+                            </div>
+
+    </div> -->
+    <div class="buttonFooter">
+      <button class="kr-sg-button-primary btn_md mr-2" [disabled]="domainCrawl.invalid" (click)="proceedSourceAddition()">Proceed</button>
+      <button class="kr-sg-button-secondary-two btn_md" (click)="cancleSourceAddition()">Back</button>
+    </div>
+  </form>
+  </div>
   <div class="sources-content-box-list h-100" *ngIf="!selectedSourceType">
     <div class="crawlContent row m-0">
       <div class="col-12 main-title label_text">Crawl content from web pages, documnets and other sources</div>
