file upload issue

--- a/findly-builder/src/app/components/source-content/source-content.component.html
+++ b/findly-builder/src/app/components/source-content/source-content.component.html
@@ -47,7 +47,7 @@
       <img _ngcontent-gpv-c11="" class="ng-tns-c11-2" src="https://banner2.cleanpng.com/20180331/vww/kisspng-computer-icons-document-memo-5ac0480f061158.0556390715225507990249.jpg">
       </div>
       <div class="custom-file " style="opacity: 0;">
-      <input type="file" class="custom-file-input " (change)="filechange($event)" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" accept=".csv,.pdf">
+      <input type="file" id="sourceFileUploader" class="custom-file-input " (change)="fileChangeListener($event)" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" accept=".csv,.pdf">
       <label class="custom-file-label browse-pad" for="inputGroupFile01"><span>Browse</span></label>
       </div>
       <div class="drag-label">Drag and Drop Or <span class="span-ul">Browse</span></div>
