--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -1,5 +1,24 @@
 @import './../../../app/scss/variables/variables.scss';
-
+.manage-form-please-wait-all{
+    position: absolute;
+    top: 45%;
+    left: 45%;
+    // box-shadow: 0 5px 10px 0 #e9eff5;
+    background:  transparent;
+    width: 223px;
+    height: 40px;
+    padding-top: 10px;
+    border-radius: 4px;
+    opacity: 0.95;
+    padding-left: 5px;
+    .please-wait-message {
+        position: relative;
+        color: #29293b;
+        top: -16px;
+        left: 25px;
+        font-size: 12px;
+    }  
+}
 .faqsMainContainer{
     .emptyFaqsContainer{
         padding: 20px;
@@ -106,6 +125,7 @@
                             border-bottom: 1px solid #e5e8ec;
                         }                                                      
                         .col{
+                            line-height: 1.45;
                             padding: 0 !important;
                             .acc-title{
                                 padding-left: 30px;
