--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -834,7 +834,7 @@ and open the template in the editor.
                 &::before{
                     content: "";                   
                     background-color: $hoverColor;                    
-                    background-image: url('/assets/icons/check-white.svg');
+                    background-image: url('^assets/icons/check-white.svg');
                     color: $whiteColor;
                     font-size: 12px;
                     background-size: 14px;
@@ -1217,7 +1217,7 @@ and open the template in the editor.
                     color: $primaryColor;
                     transition: all 0.3s ease-in;
                     z-index: 99;   
-                    background-image: url('/assets/icons/carrot-up-comp.svg');                
+                    background-image: url('^assets/icons/carrot-up-comp.svg');                
                     background-size: 14px;
                     background-repeat: no-repeat; 
                     background-position: center;
@@ -1285,7 +1285,7 @@ and open the template in the editor.
                 color: $primaryColor;
                 transition: all 0.3s ease-in;
                 z-index: 99;
-                background-image: url('/assets/icons/carrot-down-comp.svg');                
+                background-image: url('^assets/icons/carrot-down-comp.svg');                
                 background-size: 14px;
                 background-repeat: no-repeat; 
                 background-position: center;
@@ -1353,7 +1353,7 @@ and open the template in the editor.
                     height: 100%;
                     left: 10px;
                     color: $secondaryColor;  
-                    background-image: url('/assets/icons/search.svg');                
+                    background-image: url('^assets/icons/search.svg');                
                     background-size: 14px;
                     background-repeat: no-repeat; 
                     background-position: center;
@@ -2398,7 +2398,7 @@ and open the template in the editor.
                             &::before{
                                 content: "";
                                 position: absolute;
-                                background-image: url('/assets/icons/carrot-down-comp.svg');
+                                background-image: url('^assets/icons/carrot-down-comp.svg');
                                 background-size: 14px;
                                 background-repeat: no-repeat;
                                 background-position: center;
@@ -2436,7 +2436,7 @@ and open the template in the editor.
                             border-bottom: 0px;
                             &::before{
                                 content: "";
-                                background-image: url('/assets/icons/carrot-up-comp.svg');                              
+                                background-image: url('^assets/icons/carrot-up-comp.svg');                              
                             }
                         }
                     }
@@ -3005,7 +3005,7 @@ and open the template in the editor.
                             border: 0;
                             &::before{
                                 content: "";                              
-                                background-image: url('/assets/icons/carrot-down-comp.svg');
+                                background-image: url('^assets/icons/carrot-down-comp.svg');
                                 background-size: 14px;
                                 background-repeat: no-repeat;
                                 background-position: center;
