--- a/findly-builder/src/app/components/app-menu/app-menu.component.scss
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.scss
@@ -186,6 +186,9 @@ app-mainmenu{
 					color: $secondaryColor;
 					padding: 5px 5px 0px 4px;
 					outline: 0;
+					div{
+						outline: none;
+					}
 					&:hover{
 						color: $whiteColor;
 					}
