--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -32,6 +32,7 @@
                 padding-top: 10px;
                 .faqItem{
                     display: inline-block;
+                    cursor: pointer;
                     padding: 31px;
                     img{
                         width: 100px;
@@ -43,6 +44,11 @@
             text-align: left;
             padding-top: 59px;
             padding-left: 270px;
+        }
+        .centerContnet{
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     }
     .faqsListContainer{
